--- a/src/cp/term/s14/Day21.form
+++ b/src/cp/term/s14/Day21.form
@@ -26,6 +26,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="PodCombo" max="32767" attributes="0"/>
                   <Component id="PodLabel" max="32767" attributes="0"/>
                   <Group type="102" attributes="0">
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
@@ -49,7 +50,9 @@
                   <Component id="OKButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="PodLabel" pref="252" max="32767" attributes="0"/>
+              <Component id="PodCombo" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="PodLabel" pref="219" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -80,6 +83,16 @@
         <Property name="text" type="java.lang.String" value="Pod Title &amp; ID"/>
         <Property name="verticalAlignment" type="int" value="3"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JComboBox" name="PodCombo">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+          <StringArray count="0"/>
+        </Property>
+      </Properties>
+      <Events>
+        <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="PodComboItemStateChanged"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
